# cf-box

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  cloudflare_aggregated_analytics.py  cloudflare_data_export.py  cloudflare_ip_list_manager.py  config.yaml  data_export.md  docker-compose.yml  ip_list_manager.md  pyproject.toml  requirements.txt  test_cloudflare_data_export.py  test_cloudflare_ip_list_manager.py
.github/workflows/: data_export.md  data_export.yml  update_ip_lists.yml
cache/: 3.txt
cf_box/: __init__.py  aggregated_analytics.py  client.py  data_export.py  database.py  ip_list_manager.py  logging_config.py  models.py  pdf_generator.py
exports/: cloudflare_dns_records.csv  cloudflare_dns_records.xlsx  cloudflare_export.json
reports/: cf_sync_2025-01-31_10-33-30.md  cf_sync_2025-01-31_11-29-56.md  cf_sync_2026-01-06_00-22-01.md  cf_sync_2026-01-07_00-20-59.md  cf_sync_2026-01-08_00-22-39.md  cf_sync_2026-01-09_00-22-09.md  cf_sync_2026-01-10_00-21-21.md  cf_sync_2026-01-11_00-24-15.md  cf_sync_2026-01-12_00-23-35.md  cf_sync_2026-01-13_00-18-58.md  cf_sync_2026-01-14_00-22-51.md  cf_sync_2026-01-15_00-21-01.md  cf_sync_2026-01-16_00-22-30.md  cf_sync_2026-01-17_00-21-18.md  cf_sync_2026-01-18_00-24-16.md  cf_sync_2026-01-19_00-23-50.md  cf_sync_2026-01-20_00-21-48.md  cf_sync_2026-01-21_00-23-24.md  cf_sync_2026-01-22_00-23-20.md  cf_sync_2026-01-23_00-22-53.md  cf_sync_2026-01-24_00-21-41.md  cf_sync_2026-01-25_00-24-48.md  cf_sync_2026-01-26_00-24-10.md  cf_sync_2026-01-27_00-23-50.md  cf_sync_2026-01-28_00-22-49.md  cf_sync_2026-01-29_00-25-40.md  cf_sync_2026-01-30_00-25-52.md  cf_sync_2026-01-31_00-25-06.md  cf_sync_2026-02-01_00-30-43.md  cf_sync_2026-02-02_00-27-16.md  cf_sync_2026-02-03_00-27-57.md  cf_sync_2026-02-04_00-24-45.md  cf_sync_2026-02-05_00-27-41.md  cf_sync_2026-02-06_00-25-18.md  cf_sync_2026-02-07_00-26-22.md  cf_sync_2026-02-08_00-34-52.md  cf_sync_2026-02-09_00-28-18.md  cf_sync_2026-02-10_00-32-53.md  cf_sync_2026-02-11_00-32-24.md  cf_sync_2026-02-12_00-27-18.md  (+162 more)
tests/: __init__.py  test_client.py  test_data_export.py  test_database.py  test_models.py
